--- a/templates/alert.html
+++ b/templates/alert.html
@@ -2,9 +2,14 @@
 {% block title %}Alert{% endblock %}
 {% block head %}
 
-<!-- script date range filter -->
+<!-- Include Date Range Picker -->
+<script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+<!-- DataTables date range filter -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/datetime/1.1.2/js/dataTables.dateTime.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/datetime/1.1.2/css/dataTables.dateTime.min.css" />
+<!--End DataTables date range filter -->
 <!-- script pagination -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
@@ -13,10 +18,9 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
 
-<!-- css date range filter -->
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/datetime/1.1.2/css/dataTables.dateTime.min.css" />
 <!-- css pagination -->
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+
 {% endblock %}
 {% block content %}
 <div class="card mt-3">
@@ -47,19 +51,16 @@
       <table class="display table align-middle mb-0 bg-white" id="alert">
         <thead class="bg-light">
           <tr>
-            <th>Date</th>
             <th>Station</th>
             <th>Phase</th>
             <th>Machine</th>
             <th>Detail</th>
+            <th>Date</th>
           </tr>
         </thead>
         <tbody>
           {% for error in report %}
           <tr>
-            <td>
-              <p class="text-muted mb-0 ">{{ error['Data'] }}</p>
-            </td>
             <td>
               <p class="text-muted mb-0">{{ error['Station'] }}</p>
             </td>
@@ -72,6 +73,9 @@
             <td>
               <p class="text-muted mb-0 ">{{ error['Detail'] }}</p>
             </td>
+            <td>
+              <p class="text-muted mb-0 ">{{ error['Data'] }}</p>
+            </td>
           </tr>
           {% endfor %}
         </tbody>
@@ -81,47 +85,18 @@
 </div>
 {% endblock %}
 {% block script %}
-<script>
- var minDate, maxDate;
- 
- // Custom filtering function which will search data in column four between two values
- $.fn.dataTable.ext.search.push(
-     function( settings, data, dataIndex ) {
-         var min = minDate.val();
-         var max = maxDate.val();
-         var date = new Date( data[0] );
-        //  console.log(min);
-        //  console.log(max);
-  
-         if (
-             ( min === null && max === null ) ||
-             ( min === null && date <= max ) ||
-             ( min <= date   && max === null ) ||
-             ( min <= date   && date <= max )
-         ) {
-             return true;
-         }
-         return false;
-     }
- );
-  
- $(document).ready(function() {
-     // Create date inputs
-     minDate = new DateTime($('#min'), {
-         format: 'MMMM Do YYYY'
-     });
-     maxDate = new DateTime($('#max'), {
-         format: 'MMMM Do YYYY'
-     });
-  
-     // DataTables initialisation
-     var table = $('#alert').DataTable();
-  
-     // Refilter the table
-     $('#min, #max').on('change', function (minmax) {
-         table.draw();
-         console.log(minmax)
-     });
- });
-</script>
+<script src="{{ url_for('static', filename='js/date-range-alert.js') }}"></script>
+<!-- <script>
+  $(document).ready(function () {
+    $('table.display').DataTable({
+      pagingType: 'full_numbers',
+      scrollY: '500px',
+      scrollCollapse: true,
+      pageLength: 10,
+      lengthMenu: [ [10, 25, 50, -1], [10, 25, 50, "All"] ],
+      
+    });
+
+});
+</script> -->
 {% endblock %}
