--- a/templates/setup.html
+++ b/templates/setup.html
@@ -45,19 +45,19 @@
                 <p class="text-muted mb-0">36</p>
               </td>
               <td>
-                  <input type="text" class="form-control" name="Low_Water_{{ setup['Site'] }}" id="Low_Water_{{ setup['Site'] }}"
+                  <input type="number" class="form-control" name="Low_Water_{{ setup['Site'] }}" id="Low_Water_{{ setup['Site'] }}"
                   value={{ setup['Low_Water'] }}>
               </td>
               <td>
-                  <input type="text" class="form-control" name="High_Water_{{ setup['Site'] }}" id="High_Water_{{ setup['Site'] }}"
+                  <input type="number" class="form-control" name="High_Water_{{ setup['Site'] }}" id="High_Water_{{ setup['Site'] }}"
                   value={{ setup['Hight_Water'] }}>
               </td>
               <td>
-                  <input type="text" class="form-control" name="Plus_Water_{{ setup['Site'] }}" id="Plus_Water_{{ setup['Site'] }}"
+                  <input type="number" class="form-control" name="Plus_Water_{{ setup['Site'] }}" id="Plus_Water_{{ setup['Site'] }}"
                   value={{ setup['Plus_Water'] }}> 
               </td>
               <td>
-                  <input type="text" class="form-control" name="Minus_Water_{{ setup['Site'] }}" id="Minus_Water_{{ setup['Site'] }}"
+                  <input type="number" class="form-control" name="Minus_Water_{{ setup['Site'] }}" id="Minus_Water_{{ setup['Site'] }}"
                   value={{ setup['Minus_Water'] }}>
               </td>
               <!-- <td>
@@ -69,11 +69,11 @@
                 value={{ setup['Hight_Temp'] }}>
             </td> -->
             <td>
-                <input type="text" class="form-control" name="Plus_Temp_{{ setup['Site'] }}" id="Plus_Temp_{{ setup['Site'] }}"
+                <input type="number" class="form-control" name="Plus_Temp_{{ setup['Site'] }}" id="Plus_Temp_{{ setup['Site'] }}"
                 value={{ setup['Plus_Temp'] }}> 
             </td>
             <td>
-                <input type="text" class="form-control" name="Minus_Temp_{{ setup['Site'] }}" id="Minus_Temp_{{ setup['Site'] }}"
+                <input type="number" class="form-control" name="Minus_Temp_{{ setup['Site'] }}" id="Minus_Temp_{{ setup['Site'] }}"
                 value={{ setup['Minus_Temp'] }}>
             </td>
             </tr>
@@ -122,11 +122,8 @@
 </script>
 <script>
 {% for setup_script in setup %}
-var Low_Water = $("#Low_Water_{{ setup_script['Site'] }}").val();
 var High_Water = $("#High_Water_{{ setup_script['Site'] }}").val();
-if(Low_Water > High_Water) {
-  $("#Low_Water_{{ setup_script['Site'] }}").val(High_Water-1)
-}
+$("#Low_Water_{{ setup_script['Site'] }}").attr({"max":High_Water});
 {% endfor %}
 </script>
 {% endblock %}
