--- a/templates/alert.html
+++ b/templates/alert.html
@@ -74,7 +74,7 @@
               <p class="text-muted mb-0 ">{{ error['Detail'] }}</p>
             </td>
             <td>
-              <p class="text-muted mb-0 ">{{ error['Data'] }}</p>
+              <p class="text-muted mb-0 ">{{ error['Date'] }}</p>
             </td>
           </tr>
           {% endfor %}
