--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="https://mail.boichitrobd.com/public/uploads/all/5nYj9vziBBIPw8pEWP6WPIOzyEePxs7HTCop8f7o.png">
     <title>{% block title %}Bootstrap demo{% endblock %}</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
