--- a/templates/line.html
+++ b/templates/line.html
@@ -1,23 +1,21 @@
 {% extends 'layout.html' %}
 {% block title %}Real-Time Charts{% endblock %}
 {% block head %}
+<!-- DataTable script -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/datetime/1.1.2/js/dataTables.dateTime.min.js"></script>
+<!-- DataTable css -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/datetime/1.1.2/css/dataTables.dateTime.min.css" />
 <!-- Include Date Range Picker -->
 <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
 <!-- script pagination -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
-<!-- css pagination -->
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
-<!-- DataTables date range filter -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/datetime/1.1.2/js/dataTables.dateTime.min.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/datetime/1.1.2/css/dataTables.dateTime.min.css" />
-<!--End DataTables date range filter -->
 <!--Chart-->
 <script>
   google.charts.load('current', {'packages':['line']});
@@ -26,11 +24,27 @@ google.charts.setOnLoadCallback(drawChartLine_Summon);
 function drawChartLine_Summon() {
 
 var data = new google.visualization.DataTable();
+{% if custom == "True" %}
 data.addColumn('string', 'Day');
+{% endif %}
+{% if now == "True" %}
+data.addColumn('string', 'Time');
+{% endif %}
 {% for chart_report in column %}
 data.addColumn('number', '{{ chart_report['Site'] }}');
 {% endfor %}
 
+{% if now == "True" %}
+data.addRows([
+{% for chart_use in table %}
+  ['{{ chart_use['Time'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
+  {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-6'] }},
+  {{ chart_use['L13'] }}, {{ chart_use['L14'] }}, {{ chart_use['L15 Station 1'] }}, {{ chart_use['L15 Station 2'] }},
+  {{ chart_use['ROBOT'] }} ],
+{% endfor %}
+]);
+{% endif %}
+{% if custom == "True" %}
 data.addRows([
 {% for chart_use in table %}
   ['{{ chart_use['Date'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
@@ -39,6 +53,7 @@ data.addRows([
   {{ chart_use['ROBOT'] }} ],
 {% endfor %}
 ]);
+{% endif %}
 
 var options = {
   chart: {
@@ -107,7 +122,8 @@ $(window).resize(function(){
         </div>
       </div>
       <div class="card mb-3 mt-3">
-        <h6 class="card-header bg-dark bg-gradient text-white">Table of  Deionized water</h6>
+        <h6 class="card-header d-flex justify-content-between bg-dark bg-gradient text-white">Table of  Deionized water
+        </h6>
         <div class="card-body p-3">
           <div class="d-md-block">
             <button class="mt-1 mb-2  btn btn-danger">
@@ -122,6 +138,7 @@ $(window).resize(function(){
               <thead class="bg-light">
                 <tr>
                   <th>Date</th>
+                  <th>Time</th>
                   <th>Phase</th>
                   <th>Site</th>
                   <th>Status</th>
@@ -134,6 +151,9 @@ $(window).resize(function(){
                 <tr>
                   <td>
                     <p class="text-muted mb-0">{{ report['Date'] }}</p>
+                  </td>
+                  <td>
+                    <p class="text-muted mb-0">{{ report['Time'] }}</p>
                   </td>
                   <td>
                     <p class="text-muted mb-0">{{ report['Phase'] }}</p>
