--- a/templates/alert.html
+++ b/templates/alert.html
@@ -19,10 +19,12 @@
 {% endblock %}
 {% block content %}
 <div class="card mt-3">
-  <div class="card-header d-flex bg-danger bg-gradient text-white">
-    <div class="row">
-      <div class="col-lg-6"><h5>Alert status</h5></div>
-      <div class="col-lg-6 ">
+  <div class="card-header  bg-danger bg-gradient text-white">
+    <div class="row justify-content-lg-end">
+      <div class="col-lg-6">
+        <h5>Alert status</h5>
+      </div>
+      <div class="col-lg-6 d-flex justify-content-lg-end ">
         <!-- date range filter -->
         <table cellspacing="5" cellpadding="5">
           <tbody>
