--- a/templates/alert.html
+++ b/templates/alert.html
@@ -21,18 +21,18 @@
 <div class="card mt-3">
   <div class="card-header  bg-danger bg-gradient text-white">
     <div class="row justify-content-lg-end">
-      <div class="col-lg-6">
+      <div class="col-lg-5">
         <h5>Alert status</h5>
       </div>
-      <div class="col-lg-6 d-flex justify-content-lg-end ">
+      <div class="col-lg-7 d-flex justify-content-lg-end ">
         <!-- date range filter -->
         <table cellspacing="5" cellpadding="5">
           <tbody>
-            <tr class="d-flex">
-              <td>Choose Date :</td>
-              <td><input type="text" id="min" name="min"></td>
-              <td>To</td>
-              <td><input type="text" id="max" name="max"></td>
+            <tr >
+              <td><h5>Choose Date :</h5></td>
+              <td><input type="text" class="form-control" id="min" name="min"></td>
+              <td><h5>To</h5></td>
+              <td><input type="text" class="form-control" id="max" name="max"></td>
             </tr>
           </tbody>
         </table>
