--- a/templates/alert.html
+++ b/templates/alert.html
@@ -36,7 +36,8 @@
             </tr>
           </tbody>
         </table>
-      <!-- End date range filter --></div>
+      <!-- End date range filter -->
+    </div>
     </div>
   </div>
     <div class="card-body">
