--- a/templates/TrendDiwater.html
+++ b/templates/TrendDiwater.html
@@ -20,20 +20,27 @@
 {% endblock %}
 {% block content %}
 <div class="card">
-    <h5 class="card-header d-flex justify-content-between bg-dark bg-gradient text-white">Trend Deionized water
-      <!-- date range filter -->
-      <table  cellspacing="5" cellpadding="5">
-        <tbody>
-          <tr>
-            <td>Choose Date :</td>
-            <td><input type="text" id="min" name="min"></td>
-            <td>To</td>
-            <td><input type="text" id="max" name="max"></td>
-          </tr>
-        </tbody>
-      </table>
-    <!-- End date range filter -->
-    </h5>
+  <div class="card-header  bg-dark bg-gradient text-white">
+    <div class="row justify-content-lg-end">
+      <div class="col-lg-5">
+        <h5>Trend Deionized water</h5>
+      </div>
+      <div class="col-lg-7 d-flex justify-content-lg-end ">
+        <!-- date range filter -->
+        <table cellspacing="5" cellpadding="5">
+          <tbody>
+            <tr >
+              <td><h5>Choose Date :</h5></td>
+              <td><input type="text" class="form-control" id="min" name="min"></td>
+              <td><h5>To</h5></td>
+              <td><input type="text" class="form-control" id="max" name="max"></td>
+            </tr>
+          </tbody>
+        </table>
+      <!-- End date range filter -->
+    </div>
+    </div>
+  </div>
     <div class="card-body">
         <div class="card">
             <div class="card-header bg-dark bg-gradient text-white d-flex justify-content-between">Phase4</div>
