--- a/templates/TrendDiwater.html
+++ b/templates/TrendDiwater.html
@@ -51,6 +51,7 @@
                                   <thead class="bg-light">
                                     <tr>
                                       <th>Date</th>
+                                      <th>Time</th>
                                       <th>Machine</th>
                                       <th>Status Machine</th>
                                       <th>StatusDIWater</th>
@@ -61,6 +62,9 @@
                                     <tr>
                                       <td>
                                         <p class="text-muted mb-0">{{ P4['Date'] }}</p>
+                                      </td>
+                                      <td>
+                                        <p class="text-muted mb-0">{{ P4['Time'] }}</p>
                                       </td>
                                       <td>
                                         <p class="text-muted mb-0">{{ P4['Site'] }}</p>
@@ -94,6 +98,7 @@
                                   <thead class="bg-light">
                                     <tr>
                                       <th>Date</th>
+                                      <th>Time</th>
                                       <th>Machine</th>
                                       <th>Status Machine</th>
                                       <th>StatusDIWater</th>
@@ -104,6 +109,9 @@
                                     <tr>
                                       <td>
                                         <p class="text-muted mb-0">{{ P5['Date'] }}</p>
+                                      </td>
+                                      <td>
+                                        <p class="text-muted mb-0">{{ P5['Time'] }}</p>
                                       </td>
                                       <td>
                                         <p class="text-muted mb-0">{{ P5['Site'] }}</p>
@@ -136,6 +144,7 @@
                                   <thead class="bg-light">
                                     <tr>
                                       <th>Date</th>
+                                      <th>Time</th>
                                       <th>Machine</th>
                                       <th>Status Machine</th>
                                       <th>StatusDIWater</th>
@@ -146,6 +155,9 @@
                                     <tr>
                                       <td>
                                         <p class="text-muted mb-0">{{ P9['Date'] }}</p>
+                                      </td>
+                                      <td>
+                                        <p class="text-muted mb-0">{{ P9['Time'] }}</p>
                                       </td>
                                       <td>
                                         <p class="text-muted mb-0">{{ P9['Site'] }}</p>
