--- a/static/css/guage.css
+++ b/static/css/guage.css
@@ -1,4 +1,4 @@
-#data {
+/* #data {
     height: 100%;
     width: 100%;
 }
@@ -12,4 +12,8 @@
 .chart {
     width: 100%; 
     min-height: 600px;
-  }
+  } */
+
+#dataP4 g text[text-anchor=middle]{
+    font-size:"100";
+}
