--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% block title %}Real-Time Charts{% endblock %}
 {% block head %}
 <script src="{{ url_for('static', filename='js/guage.js') }}"></script>
+<link href="{{ url_for('static', filename='css/guage.css') }}" rel="stylesheet" />
 {% endblock %}
 {% block content %}
 
@@ -23,7 +24,7 @@
         <div class="p-1 mb-2 bg-dark bg-gradient text-white">
             <h2 class="text-center m-0" id="Phase4"></h2>
         </div>
-        <div id="dataP4" class="display dataP4">
+        <div id="dataP4" class="display dataP4 ">
         </div>
         <div class="p-1 mb-2 bg-dark bg-gradient text-white">
             <h2 class="text-center m-0" id="Phase5"></h2>
