--- a/templates/layout.html
+++ b/templates/layout.html
@@ -116,6 +116,15 @@
              <span>Sumary Deionzed water</span>
           </a>
           <a
+             href="/trendDi-chart"
+             class="list-group-item list-group-item-action py-2 ripple 
+             border-0 border-bottom bg-dark bg-gradient text-white "
+             aria-current="true"
+             >
+             <i class="fa fa-area-chart fa-fw me-3"></i>
+             <span>Chart Monitor By Phase</span>
+          </a>
+          <a
              href="/trendDi"
              class="list-group-item list-group-item-action py-2 ripple 
              border-0 border-bottom bg-dark bg-gradient text-white "
