--- a/templates/line.html
+++ b/templates/line.html
@@ -30,6 +30,9 @@ data.addColumn('string', 'Day');
 {% if now == "True" %}
 data.addColumn('string', 'Time');
 {% endif %}
+{% if customday == "True" %}
+data.addColumn('string', 'Time');
+{% endif %}
 {% for chart_report in column %}
 data.addColumn('number', '{{ chart_report['Site'] }}');
 {% endfor %}
@@ -48,6 +51,16 @@ data.addRows([
 data.addRows([
 {% for chart_use in table %}
   ['{{ chart_use['Date'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
+  {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-6'] }},
+  {{ chart_use['L13'] }}, {{ chart_use['L14'] }}, {{ chart_use['L15 Station 1'] }}, {{ chart_use['L15 Station 2'] }},
+  {{ chart_use['ROBOT'] }} ],
+{% endfor %}
+]);
+{% endif %}
+{% if customday == "True" %}
+data.addRows([
+{% for chart_use in table %}
+  ['{{ chart_use['Time'] }}', {{ chart_use['AI'] }}, {{ chart_use['Fisa 2'] }}, {{ chart_use['Fisa 3'] }}, {{ chart_use['Fisa 4'] }},
   {{ chart_use['HC-3'] }}, {{ chart_use['HC-4'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-5 Station 1'] }}, {{ chart_use['HC-6'] }},
   {{ chart_use['L13'] }}, {{ chart_use['L14'] }}, {{ chart_use['L15 Station 1'] }}, {{ chart_use['L15 Station 2'] }},
   {{ chart_use['ROBOT'] }} ],
@@ -86,6 +99,39 @@ $(window).resize(function(){
             <div class="col-lg-7 d-flex justify-content-lg-end ">
               <form action="{{ url_for('line') }}" method='POST'>
                 <div class="select-wrapper mb-2 ">
+                  <select  id="selection_day" name="selection_day" class="select select-initialized">
+                    <option value="0" selected>Choose Day</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                    <option value="24">24</option>
+                    <option value="25">25</option>
+                    <option value="26">26</option>
+                    <option value="27">27</option>
+                    <option value="28">28</option>
+                    <option value="29">29</option>
+                    <option value="30">30</option>
+                    <option value="31">31</option>
+                </select>
                     <select  id="selection_month" name="selection_month" class="select select-initialized">
                         <option value="" disabled selected>Choose Month</option>
                         <option value="1">January</option>
@@ -187,9 +233,10 @@ $(window).resize(function(){
 
 {% endblock %}
 {% block script %}
-<script src="{{ url_for('static', filename='js/Report-Di.js') }}"></script>
+<script src="{{ url_for('static', filename='js/data-table-line.js') }}"></script>
 <script>
   {% for reportscript in report %}
+  console.log($( 'input[name="data{{ reportscript['Site'] }}"]' ).val())
   if ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() >= 12){
     $('p[name="{{ reportscript['Site'] }}"]').text("Pass");
   } else if ((10 <= $( 'input[name="data{{ reportscript['Site'] }}"]' ).val()) && ($( 'input[name="data{{ reportscript['Site'] }}"]' ).val() < 12)) {
