--- a/templates/alert.html
+++ b/templates/alert.html
@@ -15,6 +15,8 @@
 <!-- script pagination -->
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
 {% endblock %}
 {% block content %}
@@ -41,15 +43,6 @@
     </div>
   </div>
     <div class="card-body">
-      <div class="d-grid gap-2 d-md-block">
-        <button class="mt-1 mb-2  btn btn-danger">
-          <a href="{{ url_for('download_alert') }}" class="text-white">
-            <i class="fa fa-file-pdf me-1"></i>
-            <span class="me-3">generate pdf</span>
-          </a>
-        </button>
-    </div>
-      
       <table class="display table align-middle mb-0 bg-white" id="alert">
         <thead class="bg-light">
           <tr>
