--- a/templates/line.html
+++ b/templates/line.html
@@ -15,6 +15,8 @@
 <!-- script pagination -->
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
 <!--Chart-->
 <script>
@@ -176,15 +178,6 @@ $(window).resize(function(){
         <h5 class="card-header d-flex justify-content-between bg-dark bg-gradient text-white">Table of  Deionized water
         </h5>
         <div class="card-body p-3">
-          <div class="d-md-block">
-            <button class="mt-1 mb-2  btn btn-danger">
-              <a href="{{ url_for('download_Overview') }}" class="text-white">
-                <i class="fa fa-file-pdf me-1"></i>
-                <span class="me-3">generate pdf</span>
-              </a>
-            </button>
-        </div>
-          
           <table class="display table align-middle mb-0 bg-white" id="line">
               <thead class="bg-light">
                 <tr>
